# HouseProductionSuite

./: .gitignore  .htaccess  AbletonOptimization.md  CMakeLists.txt  DEPLOYMENT.md  LICENSE  README.md  RhythmEngine_Sequencer_Context.md  Sample scrape and pull 2d7874f10c7580bda5f6edb5e27643e5.md  Session 2 1 26 2dc874f10c7580d28b63e8bef475a7a5.md  admin.php  build_log_bass_env.txt  build_log_bus_fix.txt  build_log_categories.txt  build_log_final_fix.txt  build_plugins.bat  build_vs2026.bat  config.example.php  configure_vs2026.bat  gradient_sound_site_requirements.md  index.html  main.py  preview.bat  process_free_download.php  process_order.php  requirements.txt  requirements_stem.txt  test_services.php  update_status.php
data/stems/: stem_generator.db
data/stems/Unknown Artist - singing_c12c7fa8/: metadata.json
downloads/: README.md
libs/GUI/: EnvelopeVisualizer.h  FlatLookAndFeel.h
modules/: CMakeLists.txt
modules/djstih_dsp/: PunchInFX.h  djstih_dsp.cpp  djstih_dsp.h
plugins/MelodyEngine/: CMakeLists.txt
plugins/MelodyEngine/Source/: HouseSampler.cpp  HouseSampler.h  MelodyCanvasComponent.cpp  MelodyCanvasComponent.h  MelodyStructures.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScaleQuantizer.cpp  ScaleQuantizer.h  WavetableOscillator.cpp  WavetableOscillator.h  WavetableSynth.cpp  WavetableSynth.h
plugins/RhythmEngine/: CMakeLists.txt
plugins/RhythmEngine/Source/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RhythmStructures.h  SequencerGridComponent.cpp  SequencerGridComponent.h
plugins/RhythmEngine/Source/Voices/: BassVoice.h  KickVoice.h
plugins/SampleEngine/: CMakeLists.txt
plugins/SampleEngine/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
private_data/: .htaccess
prompts/: Abelton Live Optimization 2da874f10c758099986ad61484c1ed10.md  Ableton_Optimization_Implementation_Plan.md  CPP_Build_Structure_Guide.md  Crash_Fix_Implementation_Plan.md  Drum and bass VST implementation plan 2d7874f10c7580918bb4e6928bf99299.md  Melodic Engine Phased dev plan from gemini 2da874f10c75800a8d39c2925d5a19c9.md  MelodicEngine_Implementation_Plan.md  Melody Engine 2d8874f10c75806fb916da207e179f85.md  Perplexity Crash Anaylsis 2da874f10c7580938c09f17d9012158c.md  Phase1_DataModel_Prompt.md  Research on Melodic Engine 2da874f10c7580cea5b3cc55714b1d82.md  stem.md
public_html/: index.html  process_order.php
public_html/admin/: index.php
scraper/: analyzer.py  config.py  crawler.py  gatekeeper.py  librarian.py  sorter.py
shared/: TELookAndFeel.h
stem_generator/: __init__.py
stem_generator/cli/: __init__.py  stem_cli.py
stem_generator/core/: __init__.py  quality_analyzer.py  stem_pipeline.py
stem_generator/core/engines/: __init__.py  base_engine.py  demucs_engine.py  lalal_engine.py
stem_generator/dj/: __init__.py  batch_processor.py  library_scanner.py  stem_organizer.py
stem_generator/optimization/: __init__.py  gpu_manager.py  stem_cache.py
stem_generator/production/: __init__.py  ableton_exporter.py  stem_remixer.py
stem_generator/utils/: __init__.py  database.py  file_manager.py
